Refactor engine_getPayloadBodiesBy*  into a sealed version hierarchy (#10968)
* Refactor engine_getPayloadBodiesBy* onto the ConstructorArguments/VersionScheduler foundation

Extends ExecutionEngineJsonRpcMethod.ConstructorArguments with the one
extra field engine_getPayloadBodiesBy* needs, maxRequestBlocks
(previously a hardcoded constant on AbstractEngineGetPayloadBodies).
VersionScheduler now builds every engine_getPayloadBodiesByHashV1/V2
and engine_getPayloadBodiesByRangeV1/V2 version from the same
constructor-reference factory shape. Unlike every prior migrated
series, V1/V2 here aren't a version-supersedes-version chain: V1 has
no upper bound (V2 only adds the optional blockAccessList field, it
doesn't replace V1), and V2 stays gated behind Amsterdam via the
existing VersionScheduler.thenFrom(...) mechanism, matching how
EngineGetPayloadV6/EngineNewPayloadV5 are already gated for the same
reason (blockAccessList) - no changes to VersionScheduler itself were
needed.

engine_getPayloadBodiesByHashV1/V2 and ByRangeV1/V2 move onto the
sealed ExecutionEngineJsonRpcMethod hierarchy (replacing
AbstractEngineGetPayloadBodies), and their results move from
EngineGetPayloadBodiesResultV1/V2 to a new sealed
ExecutionPayloadBodiesV1/V2 hierarchy under internal.results, in the
same spirit as how the getPayload PR's results reuse the request-side
ExecutionPayloadV1-V4 hierarchy. Wire format is unchanged.
BlockResultFactory drops the now-unused
payloadBodiesCompleteV1/V2 methods.

Every other engine method family (getBlobs, exchangeCapabilities,
preparePayloadDebug, getClientVersion, exchangeTransitionConfiguration)
is still untouched; see the updated
ethereum/api/.../methods/engine/README.md migration status table for
what's covered so far.

Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Use VersionScheduler.alwaysActive for engine_getPayloadBodiesBy*

V1 and V2 of both series aren't a version-supersede